# structlens

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: deploy.yml
examples/structlens-sample/: main.py  pyproject.toml
src/examples/: run_structlens.py
src/structlens/: __init__.py  core.py  core_test.py  masking.py  metrics.py  metrics_test.py  similarity.py
src/structlens/utils/: logging_config.py
visualizer/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
visualizer/src/: App.css  App.tsx  index.css  sampleData.json  sharing.ts  types.ts
visualizer/src/components/: FileDropZone.tsx  LayerControls.tsx  TokenRangeControls.tsx  TreeView.tsx
visualizer/src/d3/: layout.ts  render.ts
visualizer/src/hooks/: useAutoPlay.ts
