[project]
name = "structlens"
version = "0.1.0"
description = "Uncover internal structers in LLMs"
readme = "README.md"
authors = [{ name = "Haruki Sakajo", email = "sakajoharuki@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
