[project]
name = "structlens"
version = "0.1.0"
description = "Uncover internal structers in LLMs"
readme = "README.md"
authors = [{ name = "Haruki Sakajo", email = "sakajoharuki@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lefthook>=2.0.15",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.pytest.ini_options]
pythonpath = ["./src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "B9",
    "C4",
    "SIM",
    "I",
    "UP",
    "PIE",
    "PGH",
    "PYI",
    "RUF",
]

ignore = [
    "B011",
    "E501",
    "PGH003",
    "PGH004",
]

[tool.ty.rules]
possibly-unresolved-reference = "warn"