[project]
name = "structlens"
version = "0.1.0"
description = "Uncover internal structures in LLMs"
readme = "README.md"
authors = [{ name = "Haruki Sakajo", email = "sakajoharuki@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "numpy<2.0",
    "tensorflow-cpu>=2.18.0",
    "tensorflow-text>=2.18.1",
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lefthook>=2.0.15",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "examples/structlens-sample",
]

[tool.pytest.ini_options]
pythonpath = ["./src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "B9",
    "C4",
    "SIM",
    "I",
    "UP",
    "PIE",
    "PGH",
    "PYI",
    "RUF",
]

ignore = [
    "B011",
    "E501",
    "PGH003",
    "PGH004",
]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
